--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,19 @@ version: '3.8'
 
 services:
   # PostgreSQL Database
-  postgres:
+  db:
     image: postgres:15-alpine
-    container_name: wms-postgres
+    container_name: wms-db
     restart: unless-stopped
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-wms}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-wms_password}
       POSTGRES_DB: ${POSTGRES_DB:-wms}
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      # IMPORTANT: Local directory mapping for data persistence
+      - ./pgdata:/var/lib/postgresql/data
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "5432:5432"
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-wms}"]
       interval: 10s
@@ -31,12 +32,12 @@ services:
       - .:/app
       - /app/node_modules
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-wms}:${POSTGRES_PASSWORD:-wms_password}@postgres:5432/${POSTGRES_DB:-wms}?schema=public
+      DATABASE_URL: postgresql://${POSTGRES_USER:-wms}:${POSTGRES_PASSWORD:-wms_password}@db:5432/${POSTGRES_DB:-wms}?schema=public
     command: >
       sh -c "
         apk add --no-cache postgresql-client netcat-openbsd &&
         echo 'Waiting for PostgreSQL to be ready...' &&
-        until nc -z postgres 5432; do
+        until nc -z db 5432; do
           sleep 1
         done &&
         echo 'PostgreSQL is ready!' &&
@@ -46,7 +47,7 @@ services:
         echo 'Migrations completed successfully!'
       "
     depends_on:
-      postgres:
+      db:
         condition: service_healthy
     networks:
       - wms-network
@@ -60,11 +61,13 @@ services:
     container_name: wms-app
     restart: unless-stopped
     ports:
-      - "${APP_PORT:-3000}:3000"
+      - "3000:3000"
     environment:
-      DATABASE_URL: postgresql://${POSTGRES_USER:-wms}:${POSTGRES_PASSWORD:-wms_password}@postgres:5432/${POSTGRES_DB:-wms}?schema=public
+      DATABASE_URL: postgresql://${POSTGRES_USER:-wms}:${POSTGRES_PASSWORD:-wms_password}@db:5432/${POSTGRES_DB:-wms}?schema=public
       NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
       NEXTAUTH_URL: ${NEXTAUTH_URL:-http://localhost:3000}
+      NEXT_PUBLIC_COMPANY_NAME: ${NEXT_PUBLIC_COMPANY_NAME:-Fresh Farm Logic LLC}
+      NEXT_PUBLIC_COMPANY_ADDRESS: ${NEXT_PUBLIC_COMPANY_ADDRESS:-1234 Produce Lane, Salinas, CA}
       NODE_ENV: production
     depends_on:
       prisma-migrate:
@@ -77,10 +80,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
-
-volumes:
-  postgres_data:
-    driver: local
 
 networks:
   wms-network:
