feat: Complete WMS implementation with inventory management
- Add lot lifecycle sheet component with full audit trail
- Implement inventory adjustment system with audit logging
- Create admin workspace with master data management
- Add receiving history dashboard with EOB locking
- Implement PTI-compliant label generation with Voice Pick
- Add system settings and company configuration
- Create traceability explorer for lot tracking
- Consolidate inventory and products into master-detail hub
- Add browser-native ZPL printing service
- Implement role-based access control and middleware
- Add comprehensive audit logging infrastructure

--- a/.dockerignore
+++ b/.dockerignore
@@ -53,3 +53,11 @@ docker-compose.yml
 # Prisma (will be generated in container)
 app/generated/prisma
 
+# PostgreSQL data
+pgdata
+
+# Temp files
+test-password.js
+scripts/create-admin.ts
+scripts/hash-password.js
+
