--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
+    "@react-pdf/renderer": "^3.4.4",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.13"
   },
