feat(picking): Add order picking and fulfillment system
- Add OrderPick model and database migration
- Create picking server actions (getOrderForPicking, submitPick, revertPick)
- Build picking interface UI with lot selector and progress tracking
- Add order finalization with Complete & Ship functionality
- Update LotHistory to display PICK and UNPICK events
- Refine audit logging to include customer_name, po_number, quantity
- Add unpick functionality with visual feedback
- Update OrderStatus enum with PARTIAL_PICK and READY_TO_SHIP

Features:
- FIFO lot selection for picking
- Real-time progress tracking
- Inline unpick with inventory restoration
- Comprehensive audit trail
- Order status automation (PICKING -> PARTIAL_PICK -> READY_TO_SHIP -> SHIPPED)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
           sleep 1
         done &&
         echo 'PostgreSQL is ready!' &&
-        npm install &&
+        npm ci --legacy-peer-deps &&
         npx prisma generate &&
         npx prisma migrate deploy &&
         echo 'Migrations completed successfully!'
@@ -71,16 +71,15 @@ services:
       NEXT_PUBLIC_COMPANY_ADDRESS: ${NEXT_PUBLIC_COMPANY_ADDRESS:-1234 Produce Lane, Salinas, CA}
       NODE_ENV: production
     depends_on:
-      prisma-migrate:
-        condition: service_completed_successfully
+      db:
+        condition: service_healthy
     networks:
       - wms-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3000/api/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
 
 networks:
   wms-network:
