--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
     "@react-pdf/renderer": "^4.1.0",
+    "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5",
     "zod": "^4.1.13"
   },
   "devDependencies": {
