--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.1.4",
+    "@react-pdf/renderer": "^4.1.0",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -37,14 +38,13 @@
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^7.0.11",
     "prisma": "^6.19.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.1",
-    "@react-pdf/renderer": "^4.1.0",
     "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0",
     "xlsx": "^0.18.5",
@@ -54,11 +54,12 @@
     "@tailwindcss/postcss": "^4",
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@types/nodemailer": "^6.4.15",
+    "baseline-browser-mapping": "^2.9.6",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
