feat(qbo): enable auto-sync service for production deployment
- Add qbo-sync service configuration to docker-compose.prod.yml
- Configure auto-sync to run every minute in production
- Update deploy-remote.sh to support docker-compose.prod.yml override
- Add QBO auto-sync environment variables to ENV_TEMPLATE_DOCKER.txt
- Add QBO auto-sync verification steps to POST_DEPLOYMENT.md
- Clean up trailing whitespace in lib/logger.ts

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,3 +12,16 @@ services:
     # Add production-specific configurations here
     # e.g., resource limits, logging, etc.
 
+  # QuickBooks Auto-Sync Service (Production)
+  qbo-sync:
+    environment:
+      # Enable auto-sync in production
+      QBO_AUTO_SYNC_ENABLED: "true"
+      # Run sync every 1 minute
+      QBO_SYNC_INTERVAL_MINUTES: "1"
+      # Enable all sync types
+      QBO_SYNC_CUSTOMERS: "true"
+      QBO_SYNC_PRODUCTS: "true"
+      QBO_SYNC_VENDORS: "true"
+      QBO_SYNC_INVOICES: "true"
+
