--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS='-r newrelic' next start",
     "lint": "eslint",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
     "@hookform/resolvers": "^5.2.2",
+    "@newrelic/next": "^0.9.0",
     "@prisma/client": "^6.19.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -40,6 +41,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
+    "newrelic": "^13.8.1",
     "next": "^16.0.10",
     "next-auth": "^5.0.0-beta.30",
     "node-cron": "^4.2.1",
