feat: Complete New Relic full-stack monitoring integration
APM Configuration:
- Update newrelic.js with WMS-Production app name
- Add logging.level: 'info' configuration
- Ensure allow_names: ['Next.js'] is set
- Start script already configured to pre-load agent (NODE_OPTIONS='-r newrelic')

Infrastructure Monitoring:
- Add newrelic-infra service to docker-compose.yml
- Configure with privileged: true, network_mode: host, pid: host
- Mount host filesystem and Docker socket for full monitoring
- Pass NRIA_LICENSE_KEY from environment

Environment Variables:
- Add NEW_RELIC_LICENSE_KEY and NEW_RELIC_APP_NAME to app service
- Create .env.example with New Relic configuration
- Update .gitignore to allow .env.example to be tracked

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,9 @@ services:
       QBO_REDIRECT_URI: ${QBO_REDIRECT_URI:-http://localhost:3000/api/auth/qbo/callback}
       QBO_ENVIRONMENT: ${QBO_ENVIRONMENT:-sandbox}
       NODE_ENV: production
+      # New Relic APM Configuration
+      NEW_RELIC_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+      NEW_RELIC_APP_NAME: ${NEW_RELIC_APP_NAME:-WMS-Production}
     # Use production build (standalone mode) - server.js is in the built image
     networks:
       - wms-network
@@ -73,6 +76,21 @@ services:
     command: ["npm", "run", "qbo-sync"]
     networks:
       - wms-network
+
+  # New Relic Infrastructure Monitoring
+  newrelic-infra:
+    image: newrelic/infrastructure:latest
+    container_name: wms-newrelic-infra
+    restart: unless-stopped
+    privileged: true
+    network_mode: host
+    pid: host
+    volumes:
+      - /:/host:ro
+      - /var/run/docker.sock:/var/run/docker.sock
+    environment:
+      NRIA_LICENSE_KEY: ${NEW_RELIC_LICENSE_KEY}
+    # Note: Infrastructure agent runs on host network to monitor actual server stats
 
 networks:
   wms-network:
