--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@e965/xlsx": "^0.20.3",
     "@hookform/resolvers": "^5.2.2",
     "@newrelic/next": "^0.9.0",
     "@prisma/client": "^6.19.0",
@@ -34,12 +35,14 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.1.4",
     "@react-pdf/renderer": "^4.1.0",
+    "@types/jsbarcode": "^3.11.4",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^2.30.0",
     "dotenv": "^17.2.3",
+    "jsbarcode": "^3.12.1",
     "lucide-react": "^0.554.0",
     "newrelic": "^13.8.1",
     "next": "^16.0.10",
@@ -52,7 +55,6 @@
     "react-hook-form": "^7.66.1",
     "recharts": "^2.15.0",
     "tailwind-merge": "^3.4.0",
-    "@e965/xlsx": "^0.20.3",
     "zod": "^4.1.13"
   },
   "devDependencies": {
